team2-demo-optimized/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team2-demo
  labels:
    name: team2-demo
